<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_detail"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Server Name"
            android:gravity="left|center_vertical"/>
        <EditText
            android:id="@+id/name_server"
            android:layout_width="0px"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="Enter"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/adrress"
            android:gravity="left|center"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="0px"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="Enter"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Port"
            android:gravity="left|center"/>
        <EditText
            android:id="@+id/port"
            android:layout_width="0px"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="Optional"
            android:inputType="text"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_detail"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Nick1"
            android:gravity="left|center_vertical"/>
        <EditText
            android:id="@+id/nick1"
            android:layout_width="0px"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="Enter"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Nick2"
            android:gravity="left|center"/>
        <EditText
            android:id="@+id/nick2"
            android:layout_width="0px"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="Enter"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Nick3"
            android:gravity="left|center"/>
        <EditText
            android:id="@+id/nick3"
            android:layout_width="0px"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="Enter"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:orientation="horizontal">
        <Button
            android:text="@string/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/go_back" />
        <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/done_button" />
    </LinearLayout>

</LinearLayout>
